%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!206 &-6200014580484317385
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Sprint
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 8961333695901018681}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7619032664132291820}
    m_Threshold: 1
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: AimWeight
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-5185841780129071003
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Run
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 8961333695901018681}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7619032664132291820}
    m_Threshold: 1
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: AimWeight
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-4432854132768599658
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -2033296940674034950, guid: 5bd31d1904471714abf025cdf0226e33, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -2629715561539153337, guid: d697a80c3e3c91047a5660456a86af3a, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: AimWeight
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-3534970806463484228
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Jog
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 8961333695901018681}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7619032664132291820}
    m_Threshold: 1
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: AimWeight
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-1706519853342539061
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Walk
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7490677057501242704}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 989566657314562087}
    m_Threshold: 1
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: AimWeight
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-184706950133912908
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Strafe
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -4432854132768599658}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1706519853342539061}
    m_Threshold: 0.15
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -3534970806463484228}
    m_Threshold: 0.4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5185841780129071003}
    m_Threshold: 0.65
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -6200014580484317385}
    m_Threshold: 0.9
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: Accelation
  m_BlendParameterY: XAxis
  m_MinThreshold: 0
  m_MaxThreshold: 0.9
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Shooter
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: XAxis
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: YAxis
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: AimWeight
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Accelation
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 6682429385796695231}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &989566657314562087
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Aim
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 83450145202593063, guid: 8fec29dd2ce7d304c9491eeeeb81f8c5, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7593017346468746175, guid: d6461e58246ef6849b86f780003b68e7, type: 3}
    m_Threshold: 0.125
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 2989179110936037344, guid: ab9f3675dca782f43a368f7313276279, type: 3}
    m_Threshold: 0.25
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 2458469849635539842, guid: 8131c3e1fec0cd74aaccf57227b67fe2, type: 3}
    m_Threshold: 0.375
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 2245963570812256280, guid: 36fc5db077ac7f34592618a767c69f83, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -3975193076942186852, guid: 8b0c163146882e84ba8456f566a381e5, type: 3}
    m_Threshold: 0.625
    m_Position: {x: -0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7925948992481109043, guid: 7532cc3245bea9c41bef4142ad272f35, type: 3}
    m_Threshold: 0.75
    m_Position: {x: -0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 3539943383538435326, guid: bc32946fd1e0f134e8f8bcef83b914ce, type: 3}
    m_Threshold: 0.875
    m_Position: {x: 0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: XAxis
  m_BlendParameterY: YAxis
  m_MinThreshold: 0
  m_MaxThreshold: 0.875
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!1102 &2613913117124249558
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Strafe
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 1
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -184706950133912908}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &6682429385796695231
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 2613913117124249558}
    m_Position: {x: 250, y: 100, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: -10, y: 70, z: 0}
  m_EntryPosition: {x: -10, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 2613913117124249558}
--- !u!206 &7490677057501242704
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: NoAim
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7223808573399319982, guid: 2dfb00bb3ee63e24c8fe99dbf26b26e8, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -764071220189434905, guid: 4c1dec79dc1492b49b526070df65e555, type: 3}
    m_Threshold: 0.09570313
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7797133934495630544, guid: c931c789bd30b3b47afa3b64feafd784, type: 3}
    m_Threshold: 0.19140626
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7173802514747845971, guid: 3a8a90cf3be469b4f8631af1f64b191e, type: 3}
    m_Threshold: 0.28710938
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 4262421271245339310, guid: 111c93b7563f76646a4a0b510539275f, type: 3}
    m_Threshold: 0.38281253
    m_Position: {x: 0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5919335799014803187, guid: bf4f48ba25815004cad05cab8cde4656, type: 3}
    m_Threshold: 0.47851562
    m_Position: {x: -0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 1769805348930603145, guid: 47c1c9b1cfaa6a44ca9ddb026a98e7ac, type: 3}
    m_Threshold: 0.57421875
    m_Position: {x: -0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 239128871772083688, guid: 396859ee1b4674a4ba0c219a806017ec, type: 3}
    m_Threshold: 0.6699219
    m_Position: {x: 0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: XAxis
  m_BlendParameterY: YAxis
  m_MinThreshold: 0
  m_MaxThreshold: 0.6699219
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &7619032664132291820
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Aim
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -1870079936100236668, guid: f15391729f6e56648963ddc80094f9c8, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 2127110407674224541, guid: bdac709afd6af6143ac2190444c08840, type: 3}
    m_Threshold: 0.125
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6926181221956835396, guid: 6fdfe4ae0ae8f054f86025811c7a5fbb, type: 3}
    m_Threshold: 0.25
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 4489151151886534054, guid: db60deaae34d8574bb8de110ad7f21a7, type: 3}
    m_Threshold: 0.375
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5591011448831363009, guid: 33bc213ff992f1649ad9cb5c9cda68aa, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 1984853124847898257, guid: 08346ca8dde91204bb0ad69c2f1d71c6, type: 3}
    m_Threshold: 0.625
    m_Position: {x: -0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 3372616475359876609, guid: df142ae94400830488a8766ff13bf02d, type: 3}
    m_Threshold: 0.75
    m_Position: {x: -0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 4281018992422711433, guid: 52f14f351c2ab4140b2e938676e401e8, type: 3}
    m_Threshold: 0.875
    m_Position: {x: 0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: XAxis
  m_BlendParameterY: YAxis
  m_MinThreshold: 0
  m_MaxThreshold: 0.875
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &8961333695901018681
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: NoAim
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 6057490257041820434, guid: d83c596c02242f34ca64cae6b33937f4, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -3494782874098177604, guid: cbd916b09bd4c6849b0f8ca85745f3a1, type: 3}
    m_Threshold: 0.09570313
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -8822235033472567025, guid: 6040feacdbb642a4988f7f854fb88242, type: 3}
    m_Threshold: 0.19140626
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -2616556185334589114, guid: c474c98e1e4e204489de876f8c6e0139, type: 3}
    m_Threshold: 0.28710938
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1657671248626872741, guid: 8b91cbec1c8ae34499d0970e8dcdf741, type: 3}
    m_Threshold: 0.38281253
    m_Position: {x: 0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5119124852249410169, guid: c6964ca611dd46c40abf559efd51f386, type: 3}
    m_Threshold: 0.47851562
    m_Position: {x: -0.7071, y: 0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1691048220921076630, guid: 7052636a0c484854987b981fbf30d4c6, type: 3}
    m_Threshold: 0.57421875
    m_Position: {x: -0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -4795636814056632951, guid: 22b438313ddfb0c4ebd59cd9c6bee7a1, type: 3}
    m_Threshold: 0.6699219
    m_Position: {x: 0.7071, y: -0.7071}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: XAxis
    m_Mirror: 0
  m_BlendParameter: XAxis
  m_BlendParameterY: YAxis
  m_MinThreshold: 0
  m_MaxThreshold: 0.6699219
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 1
